--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OptimusTech</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" media="screen and (max-width: 1200px)" href="mobile.css">
     <link rel="shortcut icon" href="./images/worldwide.svg" type="image/x-icon">
 </head>
 <body>
